# webassembly-rust-tailwinds

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: lib.rs  main.rs
frontend/src/features/: mod.rs
frontend/src/features/hello/: mod.rs
frontend/src/pages/: login.rs  login_mini.rs  mod.rs
frontend/src/providers/: mod.rs  theme.rs
frontend/src/services/: hello_service.rs  mod.rs
ui-components/: Cargo.toml  package.json  tailwind.config.js
ui-components/docs/: optimizations.md
ui-components/src/: defaults.rs  lib.rs
ui-components/src/_components/theme_selector/: component.rs
ui-components/src/_components/theme_selector/themes/: theme.dark.summer.rs  theme.light.spring.rs  theme.light.summer.rs  types.rs
ui-components/src/components/: hello.rs  mod.rs
ui-components/src/components/base/input/: component.rs  mod.rs  theme_switcher.rs
ui-components/src/components/compound/: mod.rs
ui-components/src/components/compound/hello/: component.rs  mod.rs
ui-components/src/components/compound/login/: component.rs  mod.rs
ui-components/src/components/compound/login_mini/: component.rs  mod.rs
ui-components/src/components/compound/theme_selector02/: component.rs  dropdown.rs  mod.rs
ui-components/src/components/hello/: component.rs  mod.rs  theme_switcher.rs  types.rs
ui-components/src/components/hello/themes/: mod.rs  theme.dark.default.rs  theme.dark.spring.rs  theme.dark.summer.rs  theme.light.default.rs  theme.light.spring.rs  theme.light.summer.rs  types.rs
ui-components/src/components/layout/: component.rs  mod.rs
ui-components/src/components/login/: component.rs
ui-components/src/components/login_mini/: component.rs
ui-components/src/components/navbar/: component.rs  mod.rs
ui-components/src/components/theme_selector/: component.rs  mod.rs  types.rs
ui-components/src/components/theme_selector02/: click_handler.rs  component.rs  dropdown.rs  mod.rs  theme_switcher.rs
ui-components/src/layouts/: mod.rs
ui-components/src/layouts/base/: mod.rs
ui-components/src/layouts/footbar/: mod.rs
ui-components/src/layouts/main_content/: mod.rs
ui-components/src/layouts/navbar/: mod.rs
ui-components/src/layouts/standard/: mod.rs
ui-components/src/styles/: mod.rs  tailwind.css  theme.css
ui-components/src/theme/: mod.rs  provider.rs  router.rs  theme.rs  types.rs  utils.rs
ui-components/src/theme/themes/: mod.rs  theme.dark.spring.rs  theme.dark.summer.rs  theme.light.spring.rs  theme.light.summer.rs
(+89 files in other folders)
